packages_apps_Bluetooth: Merge tag 'android-8.0.0_r23' of https://android.googlesource.com/platform//packages/apps/Bluetooth into o8.0
Android 8.0.0 release 23

Change-Id: Ibbc7bab3bb53f2c6af74d829ae6fe742bbf2a809